// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectAdminParticipant /> should render a non-selectable list when "beta__emailing" is disabled 1`] = `
<div
  className="styles__Container-fmnQRi kkTtPG ProjectAdminParticipantstyle__Container-gABQlB iirJBD pickableList-row"
>
  <div
    className="styles__ChildWrapper-gzHiWF pickableList-row-content"
    selected={false}
  >
    <div
      className="ProjectAdminParticipantstyle__ParticipantInfo-eLA-dsP cBQXYt"
    >
      <div
        className="ProjectAdminParticipantstyle__UsernameContainer-fhbkmr huCIOa"
      >
        <a
          href="<mock-value-for-field-\\"adminUrl\\">"
        >
          &lt;mock-value-for-field-"username"&gt;
        </a>
      </div>
      <div
        className="ProjectAdminParticipantstyle__NameContainer-dEyhZK guqxjL"
      >
        <span>
          &lt;mock-value-for-field-"firstname"&gt; &lt;mock-value-for-field-"lastname"&gt;
        </span>
        <span
          className="separator"
        >
          •
        </span>
        active.on.date {"date":"2 avr. 2021"}
      </div>
      <ul
        className="InlineList__Container-jABgTk guAQSn inline-list"
      >
        <li>
          <button
            onClick={[Function]}
            type="button"
          >
            <IconMock
              aria-hidden={true}
              className="icon"
              fill="#707070"
              height={12}
              style={
                Object {
                  "flexShrink": "0",
                  "verticalAlign": "middle",
                }
              }
              width={12}
            />
            <span>
              &lt;mock-value-for-field-"name"&gt;
            </span>
          </button>
        </li>
        <li>
          <IconMock
            aria-hidden={true}
            className="icon"
            fill="#707070"
            height={12}
            style={
              Object {
                "flexShrink": "0",
                "verticalAlign": "middle",
              }
            }
            width={12}
          />
          <span>
            &lt;mock-value-for-field-"email"&gt;
          </span>
        </li>
        <li>
          <IconMock
            aria-hidden={true}
            className="icon"
            fill="#707070"
            height={12}
            style={
              Object {
                "flexShrink": "0",
                "verticalAlign": "middle",
              }
            }
            width={12}
          />
          global.votes {"num":42}
        </li>
        <li>
          <IconMock
            aria-hidden={true}
            className="icon"
            fill="#707070"
            height={12}
            style={
              Object {
                "flexShrink": "0",
                "verticalAlign": "middle",
              }
            }
            width={12}
          />
          synthesis.common.elements.nb {"num":42}
        </li>
      </ul>
    </div>
    <span
      className="UserAvatarLegacy__UserAvatarContainer-eQVGyq fSduWg"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      style={Object {}}
    >
      <img
        alt="<mock-value-for-field-\\"username\\">"
        className="img-circle object-cover user-avatar mr-10 "
        src="<mock-value-for-field-\\"url\\">"
        style={
          Object {
            "height": "42px",
            "width": "42px",
          }
        }
      />
    </span>
  </div>
</div>
`;

exports[`<ProjectAdminParticipant /> should render a selectable list when "beta__emailing" is enabled 1`] = `
<div
  className="styles__Container-fmnQRi kkTtPG ProjectAdminParticipantstyle__Container-gABQlB iirJBD pickableList-row"
>
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="styles__ChildWrapper-gzHiWF pickableList-row-content"
    selected={false}
  >
    <div
      className="ProjectAdminParticipantstyle__ParticipantInfo-eLA-dsP cBQXYt"
    >
      <div
        className="ProjectAdminParticipantstyle__UsernameContainer-fhbkmr huCIOa"
      >
        <a
          href="<mock-value-for-field-\\"adminUrl\\">"
        >
          &lt;mock-value-for-field-"username"&gt;
        </a>
      </div>
      <div
        className="ProjectAdminParticipantstyle__NameContainer-dEyhZK guqxjL"
      >
        <span>
          &lt;mock-value-for-field-"firstname"&gt; &lt;mock-value-for-field-"lastname"&gt;
        </span>
        <span
          className="separator"
        >
          •
        </span>
        active.on.date {"date":"2 avr. 2021"}
      </div>
      <ul
        className="InlineList__Container-jABgTk guAQSn inline-list"
      >
        <li>
          <button
            onClick={[Function]}
            type="button"
          >
            <IconMock
              aria-hidden={true}
              className="icon"
              fill="#707070"
              height={12}
              style={
                Object {
                  "flexShrink": "0",
                  "verticalAlign": "middle",
                }
              }
              width={12}
            />
            <span>
              &lt;mock-value-for-field-"name"&gt;
            </span>
          </button>
        </li>
        <li>
          <IconMock
            aria-hidden={true}
            className="icon"
            fill="#707070"
            height={12}
            style={
              Object {
                "flexShrink": "0",
                "verticalAlign": "middle",
              }
            }
            width={12}
          />
          <span>
            &lt;mock-value-for-field-"email"&gt;
          </span>
        </li>
        <li>
          <IconMock
            aria-hidden={true}
            className="icon"
            fill="#707070"
            height={12}
            style={
              Object {
                "flexShrink": "0",
                "verticalAlign": "middle",
              }
            }
            width={12}
          />
          global.votes {"num":42}
        </li>
        <li>
          <IconMock
            aria-hidden={true}
            className="icon"
            fill="#707070"
            height={12}
            style={
              Object {
                "flexShrink": "0",
                "verticalAlign": "middle",
              }
            }
            width={12}
          />
          synthesis.common.elements.nb {"num":42}
        </li>
      </ul>
    </div>
    <span
      className="UserAvatarLegacy__UserAvatarContainer-eQVGyq fSduWg"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      style={Object {}}
    >
      <img
        alt="<mock-value-for-field-\\"username\\">"
        className="img-circle object-cover user-avatar mr-10 "
        src="<mock-value-for-field-\\"url\\">"
        style={
          Object {
            "height": "42px",
            "width": "42px",
          }
        }
      />
    </span>
  </div>
</div>
`;
